working beta version

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         <td><input name="liczba" type="number" size="20"></td>
       </tr>
 </table>
-<input type="submit" value="Submit">
+<input type="submit" value="Submit"> <b>{{ content3 }}</b>
 </form>
 <br>
 <form action="sprzedaz" method="GET">
@@ -51,22 +51,22 @@
         <td><input name="liczba" type="number" size="20"></td>
       </tr>
 </table>
-<input type="submit" value="Submit">
+<input type="submit" value="Submit"> <b>{{ content4 }}</b>
 </form>
 <br>
 <form action="saldo" method="GET">
 <table>
       <caption>Saldo</caption>
       <tr>
-        <td>Product name:</td>
+        <td>Comment:</td>
         <td><input name="komentarz" type="text" size="20"></td>
       </tr>
       <tr>
-        <td>Unit price:</td>
+        <td>Value:</td>
         <td><input name="saldo" type="number" size="20"></td>
       </tr>
 </table>
-<input type="submit" value="Submit">
+<input type="submit" value="Submit"> <b>{{ content5 }}</b>
 </form>
 </body>
 </html>
