--- a/templates/history.html
+++ b/templates/history.html
@@ -17,9 +17,11 @@
 {% endfor %}
 <br>
 <b>HISTORY:</b><br><br>
-<b>{{ content4 }}</b>
 {% for val in content %}
 {{ val }}<br>
 {% endfor %}
+<b>{{ content4 }}</b><br>
+<b>{{ content5 }}</b><br>
+<b>{{ content6 }}</b>
 </body>
 </html>
